--- a/python_scripts/services.yaml
+++ b/python_scripts/services.yaml
@@ -6,6 +6,9 @@ double_click:
     entity_id:
       description: The entity ID of the text helper used to track clicks.
       example: input_text.double_click_helper
+    single_click_id:
+      description: The entity ID for the timer used to trigger a single click.
+      example: timer.single_click_helper
     device_id:
       description: The button.
       example: bda46002e78ffb5399fdb9e8bd8b5d33
